# mcp-audit

./: .commitmsg  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
docs/: Architecture.md  Design.md  owasp_mapping.md
fixtures/vulnerable_servers/: vuln_argument_injection.py  vuln_audit_telemetry.py  vuln_auth.py  vuln_context.py  vuln_injection.py  vuln_permissions.py  vuln_prompt_inject.py  vuln_shadow_servers.py  vuln_supply_chain.py  vuln_token_exposure.py  vuln_tool_poison.py
scan-targets/: README.md
scan-targets/mcp-server-git/: Dockerfile.partial  Dockerfile.patched  Dockerfile.vuln  README.md
scan-targets/mcp-server-sqlite/: Dockerfile  README.md  init_db.py
src/mcp_audit/: __init__.py  cli.py  orchestrator.py
src/mcp_audit/mcp_client/: __init__.py  connector.py  discovery.py
src/mcp_audit/payloads/: __init__.py  injection.py
src/mcp_audit/reporting/: __init__.py  json_report.py  severity.py
src/mcp_audit/scanner/: __init__.py  audit_telemetry.py  auth.py  base.py  context_sharing.py  injection.py  permissions.py  prompt_injection.py  registry.py  shadow_servers.py  supply_chain.py  token_exposure.py  tool_poisoning.py
src/mcp_audit/utils/: __init__.py
tests/: conftest.py  test_orchestrator.py  test_smoke.py
tests/test_mcp_client/: __init__.py  test_integration.py
tests/test_scanners/: __init__.py  test_audit_telemetry.py  test_auth.py  test_context_sharing.py  test_injection.py  test_permissions.py  test_prompt_injection.py  test_shadow_servers.py  test_supply_chain.py  test_token_exposure.py  test_tool_poisoning.py
